--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ html {
   box-sizing: inherit;
 }
 
-body{
+body {
   margin: 0;
 }
 
@@ -25,7 +25,11 @@ header {
   background-color: #e2e2e2;
 }
 
-h1{
+ul {
+  margin: 0;
+}
+
+h1 {
   text-align: left;
 }
 
